kubernetes-course/ingress-and-service-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  labels:
    name: myapp
spec:
  rules:
  - host: myapp.com # must be a valid domain name
    http:
      paths:
      - pathType: Prefix
        path: "/" # because of Prefix, it can match myapp.com, myapp.com/endpoint, myapp.com/endpoint/endpoint, etc
        backend:
          service:
            name: myapp-internal-service
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    targetPort: 8081
